feat: added new section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
         <div class="home__wrapper">
           <div class="home__top">
             <img
+              class="home__left-img"
+              src="./images/home-5.svg"
+              alt="home img"
+            />
+            <img
               class="header__top-img"
               src="./images/home-4.svg"
               alt="header img-2"
@@ -86,8 +91,6 @@
               Тотальная война нового поколения началась! Сыграйте в Battlefield™
               2042 уже сегодня. Адаптируйтесь и процветайте!
             </p>
-          </div>
-          <div class="home__bottom">
             <div class="home__price">
               <h3 class="home__price--title1 title1">4 999 Р</h3>
               <span class="home__span span1">-25%</span>
@@ -97,6 +100,7 @@
               <button class="home__btn btn1">В корзину</button>
               <button class="home__btn btn2">В избранное</button>
             </div>
+            <img class="home__right-img" src="./images/home-6.svg" alt="" />
           </div>
         </div>
       </div>
