feat: added new section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               RU/₽
               <img
                 class="header__img"
-                src="./images/header-1.svg"
+                src="./icons/header-1.svg"
                 alt="header img-1"
               />
             </h3>
@@ -58,12 +58,12 @@
             <div class="header__icons">
               <img
                 class="header__img"
-                src="./images/header-3.svg"
+                src="./icons/header-3.svg"
                 alt="header img-4"
               />
               <img
                 class="header__img"
-                src="./images/header-4.svg"
+                src="./icons/header-4.svg"
                 alt="header img-5"
               />
             </div>
@@ -101,10 +101,180 @@
               <button class="home__btn btn2">В избранное</button>
             </div>
             <img class="home__right-img" src="./images/home-6.svg" alt="" />
+            <div class="home__lines">
+              <span class="home__line"></span>
+              <span class="home__line"></span>
+              <span class="home__line"></span>
+              <span class="home__line"></span>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- home section ends -->
+    <!-- hero section starts -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero__wrapper">
+          <div class="hero__top">
+            <h2 class="hero__title title1">
+              Топ 4
+              <img
+                class="hero__img"
+                src="./icons/hero-lightning.svg"
+                alt="hero img-1"
+              />
+            </h2>
+          </div>
+          <div class="hero__bottom">
+            <div class="hero__card">
+              <i class="hero__card--title">
+                Top
+                <img
+                  class="hero__card--title-img"
+                  src="./icons/hero-lightning.svg"
+                  alt="hero card-img"
+                />
+                4
+              </i>
+              <div class="hero__card-position1">
+                <img
+                  class="hero__img-heart"
+                  src="./icons/hero-heart.svg"
+                  alt="hero img-heart"
+                />
+                <button class="hero__card-btn">В корзину</button>
+              </div>
+              <img
+                class="hero__img"
+                src="./images/hero-1.svg"
+                alt="hero img-2"
+              />
+              <div class="hero__price">
+                <h3 class="hero__price--title1 title1">16 400 P</h3>
+                <span class="hero__span span1">-15%</span>
+                <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
+              </div>
+              <p class="hero__description">Minecraft</p>
+              <div class="hero__dots">
+                <span class="hero__span"></span>
+                <h3 class="hero__dots--title">Буст</h3>
+                <span class="hero__span"></span>
+                <h3 class="hero__dots--title">Origin</h3>
+              </div>
+            </div>
+            <div class="hero__card">
+              <i class="hero__card--title">
+                Top
+                <img
+                  class="hero__card--title-img"
+                  src="./icons/hero-lightning.svg"
+                  alt="hero card-img"
+                />
+                4
+              </i>
+              <div class="hero__card-position2">
+                <img
+                  class="hero__img-heart"
+                  src="./icons/hero-heart.svg"
+                  alt="hero img-heart"
+                />
+                <button class="hero__card-btn">В корзину</button>
+              </div>
+              <img
+                class="hero__img"
+                src="./images/hero-2.svg"
+                alt="hero img-3"
+              />
+              <div class="hero__price">
+                <h3 class="hero__price--title1 title1">16 400 P</h3>
+                <span class="hero__span span1">-15%</span>
+                <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
+              </div>
+              <p class="hero__description">Minecraft</p>
+              <div class="hero__dots">
+                <span class="hero__span"></span>
+                <h3 class="hero__dots--title">Ключ</h3>
+                <span class="hero__span"></span>
+                <h3 class="hero__dots--title">Аккаунт Steam</h3>
+              </div>
+            </div>
+            <div class="hero__card">
+              <i class="hero__card--title">
+                Top
+                <img
+                  class="hero__card--title-img"
+                  src="./icons/hero-lightning.svg"
+                  alt="hero card-img"
+                />
+                4
+              </i>
+              <div class="hero__card-position3">
+                <img
+                  class="hero__img-heart"
+                  src="./icons/hero-heart.svg"
+                  alt="hero img-heart"
+                />
+                <button class="hero__card-btn">В корзину</button>
+              </div>
+              <img
+                class="hero__img"
+                src="./images/hero-3.svg"
+                alt="hero img-4"
+              />
+              <div class="hero__price">
+                <h3 class="hero__price--title1 title1">16 400 P</h3>
+                <span class="hero__span span1">-15%</span>
+                <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
+              </div>
+              <p class="hero__description">Minecraft</p>
+              <div class="hero__dots">
+                <span class="hero__span"></span>
+                <h3 class="hero__dots--title">Аккауент</h3>
+                <span class="hero__span"> </span>
+                <h3 class="hero__dots--title">Аккаунт Steam</h3>
+              </div>
+            </div>
+            <div class="hero__card">
+              <i class="hero__card--title">
+                Top
+                <img
+                  class="hero__card--title-img"
+                  src="./icons/hero-lightning.svg"
+                  alt="hero card-img"
+                />
+                4
+              </i>
+              <div class="hero__card-position4">
+                <img
+                  class="hero__img-heart"
+                  src="./icons/hero-heart.svg"
+                  alt="hero img-heart"
+                />
+                <button class="hero__card-btn">В корзину</button>
+              </div>
+              <img
+                class="hero__img"
+                src="./images/hero-4.svg"
+                alt="hero img-5"
+              />
+              <div class="hero__price">
+                <h3 class="hero__price--title1 title1">16 400 P</h3>
+                <span class="hero__span span1">-15%</span>
+                <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
+              </div>
+              <p class="hero__description">Minecraft</p>
+              <div class="hero__dots">
+                <span class="hero__span"></span>
+                <h3 class="hero__dots--title">Ключ</h3>
+                <span class="hero__span"></span>
+                <h3 class="hero__dots--title">EpicGames</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- hero section ends -->
   </body>
 </html>
