feat: added double section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 />
                 4
               </i>
-              <div class="hero__card-position1">
+              <div class="hero__card-position">
                 <img
                   class="hero__img-heart"
                   src="./icons/hero-heart.svg"
@@ -150,9 +150,9 @@
                 src="./images/hero-1.svg"
                 alt="hero img-2"
               />
-              <div class="hero__price">
+              <div class="hero__price price">
                 <h3 class="hero__price--title1 title1">16 400 P</h3>
-                <span class="hero__span span1">-15%</span>
+                <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
               <p class="hero__description">Minecraft</p>
@@ -173,7 +173,7 @@
                 />
                 4
               </i>
-              <div class="hero__card-position2">
+              <div class="hero__card-position">
                 <img
                   class="hero__img-heart"
                   src="./icons/hero-heart.svg"
@@ -186,9 +186,9 @@
                 src="./images/hero-2.svg"
                 alt="hero img-3"
               />
-              <div class="hero__price">
+              <div class="hero__price price">
                 <h3 class="hero__price--title1 title1">16 400 P</h3>
-                <span class="hero__span span1">-15%</span>
+                <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
               <p class="hero__description">Minecraft</p>
@@ -209,7 +209,7 @@
                 />
                 4
               </i>
-              <div class="hero__card-position3">
+              <div class="hero__card-position">
                 <img
                   class="hero__img-heart"
                   src="./icons/hero-heart.svg"
@@ -222,9 +222,9 @@
                 src="./images/hero-3.svg"
                 alt="hero img-4"
               />
-              <div class="hero__price">
+              <div class="hero__price price">
                 <h3 class="hero__price--title1 title1">16 400 P</h3>
-                <span class="hero__span span1">-15%</span>
+                <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
               <p class="hero__description">Minecraft</p>
@@ -245,7 +245,7 @@
                 />
                 4
               </i>
-              <div class="hero__card-position4">
+              <div class="hero__card-position">
                 <img
                   class="hero__img-heart"
                   src="./icons/hero-heart.svg"
@@ -258,9 +258,9 @@
                 src="./images/hero-4.svg"
                 alt="hero img-5"
               />
-              <div class="hero__price">
+              <div class="hero__price price">
                 <h3 class="hero__price--title1 title1">16 400 P</h3>
-                <span class="hero__span span1">-15%</span>
+                <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
               <p class="hero__description">Minecraft</p>
@@ -276,5 +276,53 @@
       </div>
     </section>
     <!-- hero section ends -->
+    <!-- banner section starts -->
+    <section class="banner">
+      <div class="container">
+        <div class="banner__wrapper">
+          <div class="banner__card1">
+            <div class="banner__card--bg">
+              <h2 class="banner__title">Играй уже сейчас в Minecraft</h2>
+              <div class="banner__card--price price">
+                <h3 class="hero__price--title1 title1">4 999 Р</h3>
+                <span class="hero__price--span span1">-25%</span>
+                <h4 class="hero__price--title2 title2"><del>6 999 Р</del></h4>
+              </div>
+              <div class="banner__buttons">
+                <button class="banner__btn btn2">Купить</button>
+                <a class="banner__link" href="#">В избранное</a>
+              </div>
+            </div>
+            <img
+              class="banner__img"
+              src="./images/banner-1.svg"
+              alt="banner img-1"
+            />
+          </div>
+          <div class="banner__card2">
+            <div class="banner__card--bg">
+              <h2 class="banner__title">
+                Играй уже сейчас в Minecraft dangerous
+              </h2>
+              <div class="banner__card--price price">
+                <h3 class="hero__price--title1 title1">4 999 Р</h3>
+                <span class="hero__price--span span1">-25%</span>
+                <h4 class="hero__price--title2 title2"><del>6 999 Р</del></h4>
+              </div>
+              <div class="banner__buttons">
+                <button class="banner__btn btn2">Купить</button>
+                <a class="banner__link" href="#">В избранное</a>
+              </div>
+            </div>
+            <img
+              class="banner__img"
+              src="./images/banner-2.svg"
+              alt="banner img-1"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- banner section ends -->
   </body>
 </html>
