--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="home__top">
             <img
               class="home__left-img"
-              src="./images/home-5.svg"
+              src="./icons/home-5.svg"
               alt="home img"
             />
             <img
@@ -100,7 +100,11 @@
               <button class="home__btn btn1">В корзину</button>
               <button class="home__btn btn2">В избранное</button>
             </div>
-            <img class="home__right-img" src="./images/home-6.svg" alt="" />
+            <img
+              class="home__right-img"
+              src="./icons/home-6.svg"
+              alt="home img"
+            />
             <div class="home__lines">
               <span class="home__line"></span>
               <span class="home__line"></span>
