feat: added new section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
-              <p class="hero__description">Minecraft</p>
+              <p class="hero__description description">Minecraft</p>
               <div class="hero__dots">
                 <span class="hero__span"></span>
                 <h3 class="hero__dots--title">Буст</h3>
@@ -195,7 +195,7 @@
                 <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
-              <p class="hero__description">Minecraft</p>
+              <p class="hero__description description">Minecraft</p>
               <div class="hero__dots">
                 <span class="hero__span"></span>
                 <h3 class="hero__dots--title">Ключ</h3>
@@ -231,7 +231,7 @@
                 <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
-              <p class="hero__description">Minecraft</p>
+              <p class="hero__description description">Minecraft</p>
               <div class="hero__dots">
                 <span class="hero__span"></span>
                 <h3 class="hero__dots--title">Аккауент</h3>
@@ -267,7 +267,7 @@
                 <span class="hero__price--span span1">-15%</span>
                 <h4 class="hero__price--title2 title2"><del>16 400 P</del></h4>
               </div>
-              <p class="hero__description">Minecraft</p>
+              <p class="hero__description description">Minecraft</p>
               <div class="hero__dots">
                 <span class="hero__span"></span>
                 <h3 class="hero__dots--title">Ключ</h3>
@@ -328,5 +328,280 @@
       </div>
     </section>
     <!-- banner section ends -->
+    <!-- category sectio starts -->
+    <section class="category">
+      <div class="category__wrapper">
+        <div class="container">
+          <div class="category__top">
+            <h3 class="category__title">Новинки</h3>
+            <h3 class="category__title">Аккаунты</h3>
+            <h3 class="category__title">Ключи</h3>
+            <h3 class="category__title">Активация</h3>
+            <h3 class="category__title">Прокачка</h3>
+          </div>
+          <div class="category__bottom">
+            <div class="category__card">
+              <button class="category__card-btn">Новинка</button>
+              <img
+                class="category__img"
+                src="./images/category-1.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+
+              <img
+                class="category__img"
+                src="./images/category-2.svg"
+                alt="category img"
+              />
+                            <button class="category__card-btn">Хид продаж</button>
+              <button class="category__card-btn">Новинка</button>
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/category-3.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/category-4.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/hero-1.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/hero-2.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/hero-4.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/category-5.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/category-6.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/category-7.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/category-8.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="category__card">
+              <img
+                class="category__img"
+                src="./images/hero-3.svg"
+                alt="category img"
+              />
+              <div class="category__price price">
+                <h3 class="category__price--title1 title1">16 400 P</h3>
+                <span class="category__price--span span1">-15%</span>
+                <h4 class="category__price--title2 title2">16 400 P</h4>
+              </div>
+              <p class="category__description description">Minecraft</p>
+              <div class="category__dots section__dots">
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">Ключ</h3>
+                <span class="category__span section__span"></span>
+                <h3 class="category__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <button class="category__btn">Перейти в каталог</button>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+    <!-- category section ends -->
   </body>
 </html>
