feat: added +1 section

--- a/index.html
+++ b/index.html
@@ -330,18 +330,22 @@
     <!-- banner section ends -->
     <!-- category sectio starts -->
     <section class="category">
-      <div class="category__wrapper">
-        <div class="container">
+      <div class="container">
+        <div class="category__wrapper">
           <div class="category__top">
             <h3 class="category__title">Новинки</h3>
             <h3 class="category__title">Аккаунты</h3>
             <h3 class="category__title">Ключи</h3>
             <h3 class="category__title">Активация</h3>
             <h3 class="category__title">Прокачка</h3>
+            <button class="category__card-btn">Новинка</button>
+            <div class="category__top-btn">
+              <button class="category__card-btn">Новинка</button>
+              <button class="category__card-btn">Хид продаж</button>
+            </div>
           </div>
           <div class="category__bottom">
             <div class="category__card">
-              <button class="category__card-btn">Новинка</button>
               <img
                 class="category__img"
                 src="./images/category-1.svg"
@@ -363,14 +367,11 @@
               </div>
             </div>
             <div class="category__card">
-
               <img
                 class="category__img"
                 src="./images/category-2.svg"
                 alt="category img"
               />
-                            <button class="category__card-btn">Хид продаж</button>
-              <button class="category__card-btn">Новинка</button>
               <div class="category__price price">
                 <h3 class="category__price--title1 title1">16 400 P</h3>
                 <span class="category__price--span span1">-15%</span>
@@ -600,8 +601,107 @@
           </div>
         </div>
       </div>
-      </div>
     </section>
     <!-- category section ends -->
+    <!-- discount section starts -->
+    <section class="discount">
+      <div class="container">
+        <div class="discount__wrapper">
+          <div class="discount__top">
+            <h2 class="discount__title title1">
+              Акции и скидки <span class="discount__span span1 title1">%</span>
+            </h2>
+          </div>
+          <div class="discount__bottom">
+            <div class="discount__card">
+              <img
+                class="discount__img"
+                src="./images/discount-1.1.svg"
+                alt="discount img"
+              />
+              <div class="discount__price price">
+                <h3 class="discount__price title1">16 400 P</h3>
+                <span class="discount__price--span span1">-15%</span>
+                <h4 class="discount__price title2">16 400 P</h4>
+              </div>
+              <p class="discount__description description">Minecraft</p>
+              <div class="discount__dots section__dots">
+                <span class="discount__span1 section__span"></span>
+                <h3 class="discount__dots--title section__dot">Ключ</h3>
+                <span class="discount__span2 section__span"></span>
+                <h3 class="discount__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="discount__card">
+              <img
+                class="discount__img"
+                src="./images/discount-1.svg"
+                alt="discount img"
+              />
+              <div class="discount__price price">
+                <h3 class="discount__price title1">16 400 P</h3>
+                <span class="discount__price--span span1">-15%</span>
+                <h4 class="discount__price title2">16 400 P</h4>
+              </div>
+              <p class="discount__description description">Minecraft</p>
+              <div class="discount__dots section__dots">
+                <span class="discount__span1 section__span"></span>
+                <h3 class="discount__dots--title section__dot">Ключ</h3>
+                <span class="discount__span2 section__span"></span>
+                <h3 class="discount__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="discount__card">
+              <img
+                class="discount__img"
+                src="./images/discount-2.svg"
+                alt="discount img"
+              />
+              <div class="discount__price price">
+                <h3 class="discount__price title1">16 400 P</h3>
+                <span class="discount__price--span span1">-15%</span>
+                <h4 class="discount__price title2">16 400 P</h4>
+              </div>
+              <p class="discount__description description">Minecraft</p>
+              <div class="discount__dots section__dots">
+                <span class="discount__span1 section__span"></span>
+                <h3 class="discount__dots--title section__dot">Ключ</h3>
+                <span class="discount__span2 section__span"></span>
+                <h3 class="discount__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <div class="discount__card">
+              <img
+                class="discount__img"
+                src="./images/discount-3.svg"
+                alt="discount img"
+              />
+              <div class="discount__price price">
+                <h3 class="discount__price title1">16 400 P</h3>
+                <span class="discount__price--span span1">-15%</span>
+                <h4 class="discount__price title2">16 400 P</h4>
+              </div>
+              <p class="discount__description description">Minecraft</p>
+              <div class="discount__dots section__dots">
+                <span class="discount__span1 section__span"></span>
+                <h3 class="discount__dots--title section__dot">Ключ</h3>
+                <span class="discount__span2 section__span"></span>
+                <h3 class="discount__dots--title section__dot">
+                  Аккаунт Steam
+                </h3>
+              </div>
+            </div>
+            <img src="./images/discount-4.svg" alt="discount img" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- discount section ends -->
   </body>
 </html>
