feat: added new qwerthbvcxas

--- a/index.html
+++ b/index.html
@@ -703,5 +703,49 @@
       </div>
     </section>
     <!-- discount section ends -->
+    <!-- blog section starst -->
+    <section class="blog">
+      <div class="container">
+        <div class="blog__wrapper">
+          <div class="blog__top">
+            <h2 class="blog__title title1">Свежее в блоге</h2>
+          </div>
+          <div class="blog__bottom">
+            <div class="blog__card">
+              <img class="blog__img" src="./images/blog-1.svg" alt="blog img" />
+              <h3 class="blog__card--title title2">
+                Да как так-то борются с пиратством?
+              </h3>
+              <p class="blog__card--p">
+                Скримеры — только верхушка айсберга ужаса
+              </p>
+              <h4 class="blog__card-date">14 Октября 2021</h4>
+            </div>
+            <div class="blog__card">
+              <img class="blog__img" src="./images/blog-1.svg" alt="blog img" />
+              <h3 class="blog__card--title title2">
+                Да как так-то борются с пиратством?
+              </h3>
+              <p class="blog__card--p">
+                Скримеры — только верхушка айсберга ужаса
+              </p>
+              <h4 class="blog__card-date">14 Октября 2021</h4>
+            </div>
+            <div class="blog__card">
+              <img class="blog__img" src="./images/blog-1.svg" alt="blog img" />
+              <h3 class="blog__card--title title2">
+                Да как так-то борются с пиратством?
+              </h3>
+              <p class="blog__card--p">
+                Скримеры — только верхушка айсберга ужаса
+              </p>
+              <h4 class="blog__card-date">14 Октября 2021</h4>
+            </div>
+            <button class="category__btn">Все публикации</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- blog section ends -->
   </body>
 </html>
